2000-12-06  Fernando Nasser  <fnasser@redhat.com>

	* cli/cli-decode.c (lookup_cmd): Change disabled code into comment.

2000-12-06  Fernando Nasser  <fnasser@redhat.com>

	* cli/cli-decode.c (lookup_cmd): Remove old stale copy of this routine
	which was not being used for quite some time.

2000-12-05  Mark Kettenis  <kettenis@gnu.org>

	* gdb-stabs.h (SECT_OFF_MAX): Increase to 64.
	* symfile.h (MAX_SECTIONS): Increase to 64.

2000-12-05  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* config/sh/tm-sh.h (struct gdbarch_tdep): Get rid of
 	DR{2,4,6,8,10,12}_REGNUM, FV{4,8}_REGNUM, they are not used
 	anywhere.
	* sh-tdep.c (sh_gdbarch_init): Don't initialize
 	DR{2,4,6,8,10,12}_REGNUM, FV{4,8}_REGNUM.

2000-12-04  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* utils.c (internal_verror): Fix typo in error msg.

2000-12-03  Mark Kettenis  <kettenis@gnu.org>

	* Makefile.in (symfile.o): Add gdb-stabs.h to dependencies list.

2000-12-04  Kevin Buettner  <kevinb@redhat.com>

	* elfread.c (record_minimal_symbol_and_info): Don't guess
	at the section index; instead just always use the bfd index.
	(elf_symtab_read): Handle weak symbols appearing in data
	sections.

Mon Dec  4 14:36:39 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch.sh (STAB_REG_TO_REGNUM, ECOFF_REG_TO_REGNUM,
 	DWARF_REG_TO_REGNUM, SDB_REG_TO_REGNUM, DWARF2_REG_TO_REGNUM):
 	Add.
	* gdbarch.h, gdbarch.c: Regenerate.
	* arch-utils.c (no_op_reg_to_regnum): New function.
	* arch-utils.h (no_op_reg_to_regnum): Declare.

	* dwarfread.c (DWARF_REG_TO_REGNUM), coffread.c
 	(SDB_REG_TO_REGNUM), stabsread.h (STAB_REG_TO_REGNUM),
 	mdebugread.c (ECOFF_REG_TO_REGNUM): Delete macro.

	* config/mips/tm-mips.h (ECOFF_REG_TO_REGNUM, STAB_REG_TO_REGNUM):
 	Delete.  Moved to mips-tdep.c.
	* mips-tdep.c (mips_ecoff_reg_to_regnum, mips_stab_reg_to_regnum):
 	New functions.
	(mips_gdbarch_init): Add ``mips_ecoff_reg_to_regnum'' and
 	``mips_stab_reg_to_regnum'' to multi-arch vector.
