@@ -1,5 +1,10 @@
 2000-12-06  Fernando Nasser  <fnasser@redhat.com>
 
+	* cli/cli-decode.c (add_abbrev_cmd): Reinstate. Add comment saying
+	that is not currently used.
+
+2000-12-06  Fernando Nasser  <fnasser@redhat.com>
+
 	* cli/cli-decode.c (lookup_cmd): Change disabled code into comment.
 
 2000-12-06  Fernando Nasser  <fnasser@redhat.com>
